--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "init": "ts-node ./src/init.ts",
+    "init-db": "ts-node ./src/init.ts",
     "start": "ts-node ./src/index.ts"
   },
   "keywords": [],
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
-    "graphql": "^16.6.0",
+    "graphql": "^15.8.0",
     "pg": "^8.8.0",
     "postgraphile": "^4.12.11"
   }
