--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/pg": "^8.6.5"
   },
   "dependencies": {
+    "@graphile-contrib/pg-simplify-inflector": "^6.1.0",
     "axios": "^1.1.3",
     "graphql": "^15.8.0",
     "pg": "^8.8.0",
