--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.11.7",
-    "@types/pg": "^8.6.5"
+    "@types/pg": "^8.6.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
     "axios": "^1.1.3",
