--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "postgressql-sample",
+  "name": "products-crud",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/server.ts",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "init-db": "ts-node ./src/init.ts",
