--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,6 +98,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["./src/**/*", "src/index.ts"],
-  "exclude": ["node_modules"]
+  "include": ["./src/index.ts", "./src/connection.ts"],
+  "exclude": ["./src/init.ts", "node_modules"]
 }
